Improvements and fixes

--- a/.gitignore
+++ b/.gitignore
@@ -251,13 +251,9 @@ _deps
 # Android studio 3.1+ serialized cache file
 
 ### JetBrains+all Patch ###
-# Ignore everything but code style settings and run configurations
-# that are supposed to be shared within teams.
+# Ignore everything.
 
 .idea/*
-
-!.idea/codeStyles
-!.idea/runConfigurations
 
 ### VisualStudio ###
 ## Ignore Visual Studio temporary files, build results, and
