--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
-project(EQPTest)
+project(BGTest)
 
-add_executable(EQPTest test.cpp)
+add_executable(BGTest test.cpp)
 
 enable_testing()
 
-target_link_libraries(EQPTest gtest gtest_main)
-add_test(EQPTest EQPTest)
+target_link_libraries(BGTest gtest gtest_main)
+add_test(BGTest BGTest)
