--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
-project(EQP)
+project(BoardGames)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(EQP src/main.cpp)
+add_executable(BoardGames src/main.cpp src/board.cpp src/eqp.cpp)
 include_directories(include)
 add_subdirectory(test)
 
@@ -16,4 +16,4 @@ set(LIBRARIES)
 foreach (LIBRARY ${LIBRARIES})
     add_subdirectory("libs/${LIBRARY}")
 endforeach (LIBRARY)
-target_link_libraries(EQP ${LIBRARIES})
+target_link_libraries(BoardGames ${LIBRARIES})
